The revision history for Net-Pcap

0.18 - 2016-05-15 - Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - CPAN RT #77807: Net::Pcap is no longer limited to one callback function,
    thanks to a patch by James Rouzier.

  [API]
  - Added pcap_offline_filter() (Martijn Lievaart).

  [Code]
  - use warnings (David Farrell).

  [Documentation]
  - CPAN RT #55163: Typo in eg/pcapdump (Iain Arnell and Jose Pedro Oliveira).
  - CPAN RT #83842: Typo in Net:Pcap (Xavier Guimard).
  - Moved HISTORY from README to main documentation.
  - Rewrote AUTHORS to acknowledge all contributors.
  - Updated copyright years.

  [Tests]
  - Added timeouts to prevent tests from hanging (Patrice Auffret).
  - t/17-lib_version.t: adjust regexp to match Apple builds (David Farrell).
  - t/50-poe-component-pcap.t: small improvments.
  - Added t/50-net-pcap-easy.t to test with Net::Pcap::Easy.
  - Added t/50-anyevent-pcap.t to test with AnyEvent::Pcap.
  - Make t/50-* pass with old versions of Test::More

  [Distribution]
  - Converted the Changes file to CPAN::Changes::Spec format.
  - Makefile.PL: append CCFLAGS to $Config{ccflags} instead of overriding it.
  - Makefile.PL: now dies when libpcap isn't found.
  - Makefile.PL: declare minimum Perl version (David Farrell).


0.17 - 2012-11-28 - Sebastien Aperghis-Tramoni (SAPER)

  [Bugfixes]
  - CPAN RT #43308: Net::Pcap no longer enables immediate (unsafe)
    signals delivery.
  - Fix allocated size in pcap_open(), pcap_createsrcstr() and
    pcap_parsesrcstr().

  [API]
  - Now made the C-like API available by default. Added the
    pcap_perl_settings() function and UNSAFE_SIGNALS pseudo-bloc.

  [Code]
  - Replaced all occurrences of safemalloc() with Newx().
  - Silenced some warnings.

  [Documentation]
  - Added a long note about Net::Pcap and signals delivery.
  - Improved README.
  - Mention Net::Pcap::Easy.

  [Tests]
  - Fixed t/17-lib_version.t to handle two digits versions.