@@ -179,6 +179,7 @@ if (eval { require ExtUtils::Constant; 1 }) {
         OPENFLAG_DATATX_UDP OPENFLAG_NOCAPTURE_RPCAP RMTAUTH_NULL RMTAUTH_PWD
         PCAP_SAMP_NOSAMP PCAP_SAMP_FIRST_AFTER_N_MS PCAP_SAMP_1_EVERY_N 
         PCAP_SRC_FILE PCAP_SRC_IFLOCAL PCAP_SRC_IFREMOTE
+        PCAP_TSTAMP_PRECISION_NANO PCAP_TSTAMP_PRECISION_MICRO
     ));
 
     ExtUtils::Constant::WriteConstants(
