@@ -1,5 +1,8 @@
 The revision history for Net-Pcap
 
+  [API]
+  - Added pcap_open_(offline|dead)_with_tstamp_precision() (Ahmad Fatoum).
+
 0.18 - 2016-05-15 - Sebastien Aperghis-Tramoni (SAPER)
 
   [Bugfixes]
